--- a/support/mono-coolstore-demo/Dockerfile
+++ b/support/mono-coolstore-demo/Dockerfile
@@ -5,5 +5,5 @@ RUN mkdir -p /opt/jboss/brms/jboss-eap-7.0/standalone
 USER root
 RUN chgrp -R 0 /opt/jboss/brms/jboss-eap-7.0/standalone
 RUN chmod -R g+rw /opt/jboss/brms/jboss-eap-7.0/standalone
-RUN find /opt/jboss/brms/jboss-eap-7.0/standalone/log -type d -exec chmod g+x {} +
+RUN find /opt/jboss/brms/jboss-eap-7.0/standalone -type d -exec chmod g+x {} +
 USER 1000
