--- a/support/docker-OCP/Dockerfile
+++ b/support/docker-OCP/Dockerfile
@@ -63,6 +63,13 @@ RUN mvn install:install-file -Dfile=/opt/jboss/brms-projects/libs/coolstore-2.0.
   && chown -R jboss:jboss $BRMS_HOME/bin/.niogit $BRMS_HOME/standalone/configuration/application-roles.properties $BRMS_HOME/standalone/configuration/standalone.xml $BRMS_HOME/standalone/deployments/brms-coolstore-demo.war $BRMS_HOME/standalone/deployments/business-central.war/WEB-INF/classes/userinfo.properties \
   && rm -rf ~/.m2/repository /opt/jboss/brms-projects
 
+# From OCP Image Hack
+#USER root
+RUN chgrp -R 0 /opt/jboss 
+RUN chmod -R g+rw /opt/jboss
+RUN find /opt/jboss -type d -exec chmod g+x {} + 
+#USER 1000
+
 # Run as JBoss
 USER 1000
 
