--- a/support/docker-OCP-app/Dockerfile
+++ b/support/docker-OCP-app/Dockerfile
@@ -7,7 +7,7 @@ MAINTAINER Greg Hoelzer with Original Contributors Andrew Block, Eric D. Schabel
 #
 #####################################################################
 # Copy demo and support files
-RUN ls -l
+RUN git clone https://github.com/mono2micro/coolstore-mono.git && ls -l
 
 COPY support/brms-demo-niogit $BRMS_HOME/bin/.niogit
 # Clone the brms-coolstore-repo repository
