--- a/support/docker-OCP-app/Dockerfile
+++ b/support/docker-OCP-app/Dockerfile
@@ -19,8 +19,8 @@ USER 1000
 #COPY coolstore-mono/projects /opt/jboss/brms-projects
 RUN cp -rf coolstore-mono/projects /opt/jboss/brms-projects
 RUN cp -rf coolstore-mono/support/libs /opt/jboss/brms-projects/libs
-RUN cp -rf COPY coolstore-mono/support/userinfo.properties $BRMS_HOME/standalone/deployments/business-central.war/WEB-INF/classes/
-RUN cp -rf COPY coolstore-mono/support/standalone.xml $BRMS_HOME/standalone/configuration/
+RUN cp -rf coolstore-mono/support/userinfo.properties $BRMS_HOME/standalone/deployments/business-central.war/WEB-INF/classes/
+RUN cp -rf coolstore-mono/support/standalone.xml $BRMS_HOME/standalone/configuration/
 # FOR OCP DEPLOYMENT
 RUN cp -rf coolstore-mono/support/settings.xml $BRMS_HOME/bin/.settings.xml
 
